objects/ssot__CareProgramTeamMemberRolePeriod__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramTeamMemberId__c</fullName>
        <label>Care Program Team Member</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Team Member Role Period Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Role__c</fullName>
        <label>Role</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716666651853_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramTeamMemberRolePeriod_Care_rel</label>
        <referenceTo>ssot__CareProgramTeamMember__dlm</referenceTo>
        <relationshipLabel>CareProgramTeamMemberRolePeriod_Care_rel</relationshipLabel>
        <relationshipName>rel_1716666651853_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>